# craigwrightisnotsatoshi-check

./: .gitignore  Cargo.toml  Pipfile  README.md  down.py
backup/: backup.sh  craigwrightisnotsatoshi-com.html
src/: main.rs
