[package]
name = "craigwrightisnotsatoshi-check"
version = "0.1.0"
edition = "2021"
authors = [
    "Otto Sabart"
]
repository = "https://github.com/seberm/craigwrightisnotsatoshi-check"
readme = "README.md"
description = """
The code will check all the signatures from craigwrightisnotsatoshi.com are valid.
"""
license = "GPL-2.0-or-later"

[dependencies]
bitcoin = "*"
base64 = "*"
clap = { version = "3.*", features = ["derive"] }
